--- a/views/shop.pug
+++ b/views/shop.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Shop
+        title #{docTitle}
         link(rel="stylesheet", href="/css/main.css")
         link(rel="stylesheet", href="/css/product.css")
     body 
@@ -12,7 +12,7 @@ html(lang="en")
             nav.main-header__nav
                 ul.main-header__item-list
                     li.main-header__item
-                        a.active(href="/") #{docTitle}
+                        a.active(href="/") Shop
                     li.main-header__item
                         a(href="/admin/add-product") Add product
         main
