--- a/views/shop.html
+++ b/views/shop.html
@@ -21,8 +21,25 @@
       </nav>
     </header>
     <main>
-      <h1>My Products</h1>
-      <p>List of all the products...</p>
+      <div class="grid">
+        <article class="card">
+          <div class="product-item">
+            <header class="card__header">
+              Product Title
+            </header>
+            <div class="card__image">
+              <img src="" alt="Product image">
+            </div>
+            <div class="card__content">
+              <h2 class="product__price">$19.99</h2>
+              <p class="product__description">How will you mearsure your life? Auther: CLAYTON M. CHRISTENSEN</p>
+            </div>
+            <div class="card__actions">
+              <button type="submit" class="btn">Add to Cart</button>
+            </div>
+          </div>
+        </article>
+      </div>
     </main>
   </body>
 </html>
