--- a/views/shop.pug
+++ b/views/shop.pug
@@ -29,3 +29,5 @@ html(lang="en")
                                 p.product__description How will you mearsure your life? Auther: CLAYTON M. CHRISTENSEN
                             .card__actions
                                 button.btn Add to Cart 
+            else
+                h1 No Products
