feat: a better way to use if/else statement

--- a/views/shop.hbs
+++ b/views/shop.hbs
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main>
-        {{#if showProduct}}
+        {{#if hasProducts}}
         {{#each products}}
         <div class="grid">
             <article class="card">
@@ -45,8 +45,7 @@
             </article>
         </div>
         {{/each}}
-        {{/if}}
-        {{#if noProducts}}
+        {{else}}
         <h1>No Products</h1>
         {{/if}}
     </main>
