--- a/views/layouts/main-layout.hbs
+++ b/views/layouts/main-layout.hbs
@@ -6,20 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{docTitle}}</title>
     <link rel="stylesheet" href="/css/main.css" />
+    {{#if productCSS}}
+    <link rel="stylesheet" href="/css/product.css" />
+    {{/if}}
+    {{#if formCSS}}
+    <link rel="stylesheet" href="/css/form.css" />
+    {{/if}}
 </head>
 
 <body>
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
-                <li class="main-header__item"><a href="/">Shop</a></li>
+                <li class="main-header__item"><a href="/" class="{{#if activeShop}}active{{/if}}">Shop</a></li>
                 <li class="main-header__item">
-                    <a href="/admin/add-product" class="active">Add product</a>
+                    <a href="/admin/add-product" class="{{#if activeAddProduct}}active{{/if}}">Add product</a>
                 </li>
             </ul>
         </nav>
     </header>
-    {{body}}
+    {{{body}}}
 </body>
 
 </html>
