--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,9 +1,11 @@
 <header class="main-header">
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
-            <li class="main-header__item"><a href="/">Shop</a></li>
             <li class="main-header__item">
-                <a href="/admin/add-product">Add product</a>
+                <a href="/" class="<%= path ==='shop'? 'active':'' %>">Shop</a>
+            </li>
+            <li class="main-header__item">
+                <a href="/admin/add-product" class="<%= path ==='add-shop'? 'active':'' %>">Add product</a>
             </li>
         </ul>
     </nav>
